--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ejs-lint": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "pm2": "^4.2.3",
     "socket.io": "^2.3.0"
   },
