--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "citadels",
-  "version": "0.0.1",
-  "description": "a simple implementation of the Citadels card game in JavaScript",
-  "main": "citadels.js",
+  "version": "0.0.2",
+  "description": "A simple implementation of the Citadels card game in JavaScript",
+  "main": "index.js",
   "dependencies": {
-    "ejs-lint": "^1.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "pm2": "^4.2.3",
-    "socket.io": "^2.3.0"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.2",
+    "express-mysql-session": "^2.1.7",
+    "express-session": "^1.17.2",
+    "socket.io": "^4.4.1"
   },
+  "type": "module",
   "scripts": {
-    "test": "node citadels.js",
-    "start": "pm2 start process.json && pm2 logs"
+    "test": "node srv/game/test/test.js",
+    "start": "nodemon srv/index.js --ignore src/"
   },
   "repository": {
     "type": "git",
