--- a/srv/package.json
+++ b/srv/package.json
@@ -15,9 +15,9 @@
   "type": "module",
   "scripts": {
     "serve": "node index.js",
-    "dev:server": "nodemon index.js --ignore src/ --ignore dist/",
-    "debug": "cross-env DEBUG=citadels:* npm run dev:server",
-    "debug:all": "cross-env DEBUG=* npm run dev:server",
+    "dev": "nodemon index.js --ignore src/ --ignore dist/",
+    "dev:debug": "cross-env DEBUG=citadels:* npm run dev",
+    "dev:debugall": "cross-env DEBUG=* npm run dev",
     "test:game": "cross-env DEBUG=citadels:* node game/test/test.js"
   },
   "repository": {
