--- a/srv/package.json
+++ b/srv/package.json
@@ -7,6 +7,7 @@
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "debug": "^4.3.3",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
