--- a/package.json
+++ b/package.json
@@ -35,14 +35,9 @@
     "last 3 version, > 0.5%, not dead, not ie <= 11"
   ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev GAME_NAME=citadels WP_CONFIG=all webpack --config webpack.config.js",
-    "prod": "cross-env NODE_ENV=prod GAME_NAME=citadels WP_CONFIG=all webpack --config webpack.config.js",
-    "dev:lobby": "cross-env NODE_ENV=dev GAME_NAME=citadels WP_CONFIG=lobby webpack --config webpack.config.js",
-    "prod:lobby": "cross-env GAME_NAME=citadels WP_CONFIG=lobby webpack --config webpack.config.js",
-    "analyse:lobby": "cross-env NODE_ENV=analyse GAME_NAME=citadels WP_CONFIG=lobby webpack --config webpack.config.js",
-    "dev:play": "cross-env NODE_ENV=dev GAME_NAME=citadels WP_CONFIG=play webpack --config webpack.config.js",
-    "prod:play": "cross-env GAME_NAME=citadels WP_CONFIG=play webpack --config webpack.config.js",
-    "analyse:play": "cross-env NODE_ENV=analyse GAME_NAME=citadels WP_CONFIG=play webpack --config webpack.config.js"
+    "dev:client": "cross-env NODE_ENV=dev GAME_NAME=citadels WP_CONFIG=all webpack --config webpack.config.js",
+    "prod:client": "cross-env NODE_ENV=prod GAME_NAME=citadels WP_CONFIG=all webpack --config webpack.config.js",
+    "analyse:client": "cross-env NODE_ENV=analyse GAME_NAME=citadels WP_CONFIG=all webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
