--- a/srv/package.json
+++ b/srv/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.2",
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   },
   "type": "module",
   "scripts": {
