--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,19 @@
 {
-    "extends": "eslint:recommended",
-    "env": {
-      "es2021": true,
-      "browser": true
-    },
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-      "sourceType": "module"
-    }
+  "extends": "eslint:recommended",
+  "env": {
+    "es2021": true,
+    "browser": true
+  },
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ]
   }
-  
+}
