--- a/srv/package.json
+++ b/srv/package.json
@@ -7,6 +7,7 @@
     "room": "./app/game-room.js"
   },
   "dependencies": {
+    "serve-static": "^1.14.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "debug": "^4.3.3",
