deploy: fix typo in deployment manifest
Signed-off-by: Gabriel Duque <gduque@gduque.fr>

--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,5 +1,5 @@
 ---
-# Simple deployment for our image at docker.io/gduque96/citadels.js:latest
+# Simple deployment for our image at docker.io/gduque96/citadels-js:latest
 apiVersion: apps/v1
 kind: Deployment
 metadata:
