--- a/srv/package.json
+++ b/srv/package.json
@@ -2,10 +2,7 @@
   "name": "citadels-js-server",
   "version": "0.0.2",
   "description": "An implementation of the Citadels card game, server part using Node.js and Socket.io",
-  "main": "app.js",
-  "exports": {
-    "room": "./app/game-room.js"
-  },
+  "main": "index.js",
   "dependencies": {
     "serve-static": "^1.14.2",
     "cookie-parser": "^1.4.6",
@@ -20,8 +17,8 @@
   },
   "type": "module",
   "scripts": {
-    "serve": "node app.js",
-    "dev": "nodemon app.js --ignore src/ --ignore dist/",
+    "serve": "node index.js",
+    "dev": "nodemon index.js --ignore src/ --ignore dist/",
     "debug:app": "cross-env DEBUG=app:*,citadels:* npm run dev",
     "debug:all": "cross-env DEBUG=* npm run dev"
   },
